# stake_watch

./: .env.example  .gitignore  Cargo.toml  README.md  deploy.sh  stake-watch.service
.claude/: CLAUDE.md
.claude/memory/: feedback_no_db_wipe.md  feedback_test_before_deploy.md
.github/workflows/: ci.yml  release.yml
config/: chainz.toml  config.toml  custom-node.toml  pivx-node.toml  services-divi-domains.toml
docs/plans/: 2026-04-02-multi-chain-support.md
src/: alert_analyzer.rs  block_processor.rs  bot.rs  config.rs  db.rs  fork_detector.rs  lib.rs  main.rs  notifier.rs  rpc.rs  stake_analyzer.rs  utils.rs
src/monitor/: mod.rs  polling.rs  socketio.rs
src/vault_indexer/: api.rs  db.rs  mod.rs  scanner.rs
src/webapp/: api.rs  auth.rs  mod.rs
static/: index.html
static/css/: style.css
static/js/: address.js  alerts.js  api.js  app.js  blockfeed.js  chain.js  chart-config.js  dashboard.js  explorer.js  helpers.js  users.js  watches.js
