[package]
name = "stake_watch"
version = "0.1.0"
edition = "2021"
description = "Telegram bot for monitoring Divi blockchain staking"
license = "MIT"

[dependencies]
teloxide = { version = "0.13", features = ["macros"] }
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
rusqlite = { version = "0.32", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
rust_socketio = { version = "0.6", features = ["async"] }
dotenvy = "0.15"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
clap = { version = "4", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
hex = "0.4"
anyhow = "1"
thiserror = "2"
async-trait = "0.1"
futures-util = "0.3"
axum = "0.8"
tower-http = { version = "0.6", features = ["cors", "fs"] }
hmac = "0.12"
sha2 = "0.10"
form_urlencoded = "1"
tokio-stream = { version = "0.1", features = ["sync"] }

[[bin]]
name = "stake_watch"
path = "src/main.rs"
